--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -53,10 +53,25 @@
     color: white;
 }
 
+a > h4 {
+    color: white;
+}
+
+a {
+    color: white;
+}
+
 .event > p {
     background-color: #FF0000;
     border-radius: 10px;
     color: black;
     border: 1px solid #c2c2c2;
     background-color: #e5e5e5;
+}
+
+iframe {
+    width: 90%;
+    height: 90%;
+    border-radius: 10px;
+    margin: 10px 10px 10px 10px;
 }
