--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -7,6 +7,7 @@
     content: '';
     position: absolute;
     width: 15px;
+    border-radius: 10px;
     background-color: 	#FF0000;
     top: 0;
     bottom: 0;
