[CHANGE] events.js

--- a/src/components/Header/DateRange.css
+++ b/src/components/Header/DateRange.css
@@ -1,5 +1,5 @@
 .dateRange {
-    position: absolute;
+    position: relative;
     margin-left: 50px;
     display: inline-flex;
     font-size: 12px;
